# AutoResume-Standardizer

./: .env  README.md  pyproject.toml
Assignment1-GenAI/: candidate_3.docx
Assignment3-ML/: sales_forecasting_approach.md
services/resume_extraction_service/app/: extraction_with_llm.py  load_document.py  main.py  template_renderer.py
services/resume_extraction_service/app/llm/: gemeni_client.py
services/resume_extraction_service/app/models/: resume_info.py
services/resume_extraction_service/app/prompts/: extraction_prompt.py
standardized/: candidate_1_standardized.docx  candidate_3_standardized.docx  resume_template_standardized.docx
